--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,7 +36,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.google.android.gms:play-services-ads:10.2.4'
+    freeCompile 'com.google.android.gms:play-services-ads:10.2.4'
     compile project(':jokesupplier')
     compile project(':jokedisplaylib')
     compile project(path: ':GCELib', configuration: 'android-endpoints')
